--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -8,108 +8,6 @@
         mc:Ignorable="d"
         Title="MyToDoBoard™" Width="600" Height="300">
     <Grid Background="#FFFEE3FF">
-
-        <!-- This data is just for design development -->
-        <Grid.DataContext>
-            <x:Array Type="board:Column">
-                <board:Column Title="Todo">
-                    <board:Column.Cards>
-                        <x:Array Type="board:Card">
-                            <board:Card Title="A1" />
-                            <board:Card Title="A2" />
-                            <board:Card Title="A3" />
-                            <board:Card Title="A4" />
-                            <board:Card Title="A5" />
-                            <board:Card Title="A6" />
-                            <board:Card Title="A7" />
-                            <board:Card Title="A8" />
-                        </x:Array>
-                    </board:Column.Cards>
-                </board:Column>
-                <board:Column Title="Ready">
-                    <board:Column.Cards>
-                        <x:Array Type="board:Card">
-                            <board:Card Title="B1" />
-                            <board:Card Title="B2" />
-                            <board:Card Title="B3" />
-                            <board:Card Title="B4" />
-                        </x:Array>
-                    </board:Column.Cards>
-                </board:Column>
-                <board:Column Title="Doing"></board:Column>
-                <board:Column Title="Done">
-                    <board:Column.Cards>
-                        <x:Array Type="board:Card">
-                            <board:Card Title="C1" />
-                            <board:Card Title="C2" />
-                            <board:Card Title="C3" />
-                            <board:Card Title="C4" />
-                            <board:Card Title="C5" />
-                            <board:Card Title="C6" />
-                            <board:Card Title="C7" />
-                            <board:Card Title="C8" />
-                        </x:Array>
-                    </board:Column.Cards>
-                </board:Column>
-            </x:Array>
-        </Grid.DataContext>
-
-        <ScrollViewer x:Name="BoardControl" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding .}">
-
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal">
-                        </StackPanel>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-
-                        <Border Margin="4" Background="AliceBlue" VerticalAlignment="Top" Width="150" CornerRadius="4">
-                            <DockPanel >
-
-                                <Label DockPanel.Dock="Top" Content="{Binding Title}" Margin="0"/>
-
-                                <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" FlowDirection="RightToLeft" Margin="4,0,4,4">
-                                    <Button Content="+ Add Card" Padding="8,1" HorizontalContentAlignment="Right" />
-                                </StackPanel>
-
-                                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="4">
-                                    <ItemsControl ItemsSource="{Binding Cards}">
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate>
-
-                                                <local:CardControl
-                                                    Margin="0,0,0,4"
-                                                    PreviewMouseDown="CardControl_PreviewMouseDown"
-                                                    MouseMove="CardControl_MouseMove"
-                                                    MouseUp="CardControl_MouseUp"
-                                                    />
-
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
-                                </ScrollViewer>
-
-                            </DockPanel>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-
-        <Canvas DataContext="{x:Null}">
-            <Grid x:Name="draggingCardControl" MouseMove="CardControl_MouseMove" MouseUp="CardControl_MouseUp">
-                <Border Background="#66000000" Margin="-1" CornerRadius="4">
-                    <Border.Effect>
-                        <BlurEffect Radius="4" />
-                    </Border.Effect>
-                </Border>
-                <local:CardControl />
-            </Grid>
-        </Canvas>
-
+        <local:BoardControl x:Name="board"></local:BoardControl>
     </Grid>
 </Window>
