--- a/WpfApp/CardControl.xaml
+++ b/WpfApp/CardControl.xaml
@@ -6,7 +6,44 @@
              xmlns:local="clr-namespace:MyToDoBoard"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="200">
-    <Border Background="WhiteSmoke" CornerRadius="4" >
-        <TextBlock Text="{Binding Title}" TextWrapping="WrapWithOverflow" Margin="4"/>
-    </Border>
+    <Grid>
+
+        <Border Background="WhiteSmoke" CornerRadius="4" >
+            <Grid Margin="{Binding Margin}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Column="1" Text="{Binding Title}" TextWrapping="WrapWithOverflow"/>
+
+                <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1">
+                    <!-- Icons -->
+                </StackPanel>
+
+            </Grid>
+        </Border>
+
+        <ItemsControl ItemsSource="{Binding Labels}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" Margin="4,0" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border Width="6" Height="12" Background="{Binding ColorBrush}" Margin="2,0" CornerRadius="1" ToolTip="{Binding Name}" >
+                        <Border.RenderTransform>
+                            <SkewTransform AngleX="-15" />
+                        </Border.RenderTransform>
+                    </Border>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+    </Grid>
 </UserControl>
