Explicit collection types in DataModel in preparation for a ViewModel

--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyToDoBoard"
-        xmlns:board="clr-namespace:MyToDoBoard.Board"
+        xmlns:board="clr-namespace:MyToDoBoard.DataModel"
         mc:Ignorable="d"
         Title="MyToDoBoard™" Width="600" Height="300">
     <Grid Background="#FFFEE3FF">
-        <local:BoardControl x:Name="board"></local:BoardControl>
+        <local:BoardControl x:Name="boardView"></local:BoardControl>
     </Grid>
 </Window>
