--- a/WpfApp/BoardControl.xaml
+++ b/WpfApp/BoardControl.xaml
@@ -144,7 +144,7 @@
 
         <!-- Main view of all columns and cards -->
         <ScrollViewer x:Name="mainView" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding .}">
+            <ItemsControl ItemsSource="{Binding Columns}">
 
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
