--- a/Report/HtmlReportStyle.css
+++ b/Report/HtmlReportStyle.css
@@ -33,7 +33,8 @@ body.withOverlay {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgb(0, 0, 0, 0.75);
+	background: rgb(0, 0, 0, 0.75);
+	background: linear-gradient(180deg, rgb(0, 0, 0, 0.8) 0%, rgba(24, 21, 30, 0.7) 100%);
 	visibility: collapse;
 }
 
