--- a/Report/HtmlReportStyle.css
+++ b/Report/HtmlReportStyle.css
@@ -158,14 +158,33 @@ body.withOverlay #content {
 .card .text {
 	margin: 0.25em 0;
 	font-size: small;
-	white-space: pre-wrap;
 	max-height: 7em;
 	overflow: clip;
+	padding: 0;
+}
+
+.card .text *, #detailedCard .text * {
+	white-space: pre-wrap;
+	margin: 0;
+	padding: 0;
+}
+
+.card .text h3, #detailedCard h3 {
+	margin: 0.5em 0 0.25em 0 !important;
+	font-weight: 500;
+}
+
+.card .text ul, #detailedCard ul {
+	white-space: normal !important;
+	list-style-type: none;
+}
+
+.card .text h3 {
+	font-size: small;
 }
 
 #detailedCard .text {
 	margin: 0.25em 0;
-	white-space: pre-wrap;
 }
 
 .card .link, #detailedCard .link {
