--- a/Report/HtmlReportStyle.css
+++ b/Report/HtmlReportStyle.css
@@ -64,6 +64,7 @@ body.withOverlay #content {
 #summary .title {
 	font-weight: bold;
 	float: left;
+	white-space: nowrap;
 }
 
 #summary .title .filename::before {
